--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -963,13 +963,14 @@ select option {
 
       h2 {
         width: 90%;
-        max-height: 5em;
+        max-height: 2.2em;
+        min-height: 1.2em;
         margin-bottom: 3px;
         text-align: left;
         font-size: 23px;
         line-height: 24px;
         color: #FFFFFF;
-        overflow: auto;
+        overflow: hidden;
         text-transform: uppercase;
       }
 
@@ -977,7 +978,7 @@ select option {
 
       .foto_noticia{
         width: 90%;
-        height: 12em;
+        height: 148px;
         margin-bottom: 15px;
         margin-top: 10px;
         border: 4px solid white;
@@ -1003,7 +1004,8 @@ select option {
         font-family: 'Montserrat Light', serif;
         width: 90%;
         margin-bottom: 10px;
-        height: 20%;
+        max-height: 50%;
+        height: 150px;
         overflow: auto;
         font-size: 12px;
         line-height: 15px;
