--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -964,7 +964,7 @@ select option {
       h2 {
         width: 90%;
         max-height: 2.2em;
-        min-height: 1.2em;
+        min-height: 2.2em;
         margin-bottom: 3px;
         text-align: left;
         font-size: 23px;
@@ -978,7 +978,7 @@ select option {
 
       .foto_noticia{
         width: 90%;
-        height: 148px;
+        height: 160px;
         margin-bottom: 15px;
         margin-top: 10px;
         border: 4px solid white;
@@ -1004,9 +1004,10 @@ select option {
         font-family: 'Montserrat Light', serif;
         width: 90%;
         margin-bottom: 10px;
-        max-height: 50%;
-        height: 150px;
-        overflow: auto;
+        max-height: 105px;
+        height: 105px;
+        overflow-x: hidden;
+        overflow-y: auto;
         font-size: 12px;
         line-height: 15px;
         color: #FFFFFF;
